--- a/_includes/home.html
+++ b/_includes/home.html
@@ -6,7 +6,7 @@
             1 - INTRODUCTION [<a href="assets/slides/1.pdf">SLIDES</a>] <br>
             2 - SEMANTIC SEGMENTATION [<a href="assets/slides/2.pdf">SLIDES</a>]  <br>
             3 - UNSUPERVISED DOMAIN ADAPTATION FOR SEMANTIC SEGMENTATION [<a href="assets/slides/3.pdf">SLIDES</a>] <br>
-            4 - STEREO MATCHING <br>
+            4 - STEREO MATCHING [<a href="assets/slides/4.pdf">SLIDES</a>] <br>
             5 - MONOCULAR DEPTH ESTIMATION <br>
             6 - MULTIPLE VIEWS AND MOTION
         </p>
