--- a/_includes/home.html
+++ b/_includes/home.html
@@ -7,7 +7,7 @@
             2 - SEMANTIC SEGMENTATION [<a href="assets/slides/2.pdf">SLIDES</a>]  <br>
             3 - UNSUPERVISED DOMAIN ADAPTATION FOR SEMANTIC SEGMENTATION [<a href="assets/slides/3.pdf">SLIDES</a>] <br>
             4 - STEREO MATCHING [<a href="assets/slides/4.pdf">SLIDES</a>] <br>
-            5 - MONOCULAR DEPTH ESTIMATION <br>
+            5 - MONOCULAR DEPTH ESTIMATION [<a href="assets/slides/5.pdf">SLIDES</a>] <br>
             6 - MULTIPLE VIEWS AND MOTION
         </p>
     </div>
