--- a/_includes/home.html
+++ b/_includes/home.html
@@ -8,7 +8,7 @@
             3 - UNSUPERVISED DOMAIN ADAPTATION FOR SEMANTIC SEGMENTATION [<a href="assets/slides/3.pdf">SLIDES</a>] <br>
             4 - STEREO MATCHING [<a href="assets/slides/4.pdf">SLIDES</a>] <br>
             5 - MONOCULAR DEPTH ESTIMATION [<a href="assets/slides/5.pdf">SLIDES</a>] <br>
-            6 - MULTIPLE VIEWS AND MOTION
+            6 - MULTIPLE VIEWS AND MOTION [<a href="assets/slides/6.pdf">SLIDES</a>] <br>
         </p>
     </div>
 </div>
